2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (main) [TEST]: Reactivate normal test.

2011-01-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (scratch) [! STANDALONE]: Remove leftover
	variable.

2011-01-04  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/legacycfg.c (GRUB_MOD_INIT): Fix typo in
	descriptions of extract_legacy_entries_source and
	extract_legacy_entries_configfile.
	Reported by: Seung Soo, Ha.

2011-01-03  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/bus/pci.c (grub_pci_iterate): Skip remaining functions
	on devices that do not implement function 0.

2011-01-03  Dave Vasilevsky <dave@vasilevsky.ca>

	* grub-core/fs/hfsplus.c: Make parent unsigned.
	(grub_hfsplus_cmp_catkey): Don't compare using subtraction, it
	overflows.
	(grub_hfsplus_cmp_extkey): Likewise

2011-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Correctly use bootloader_id and not
	GRUB_DISTRIBUTOR on efibootmgr line.

2011-01-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (main): Report errors in FT_New_Face.

2010-12-31  Ian Campbell <ijc@hellion.org.uk>

	* util/grub.d/20_linux_xen.in (linux_entry): Correctly capitalize
	Xen and reorder menu item wording to make it clearer that this entry
	will launch Xen.  Print separate messages when loading Xen and
	Linux.

2010-12-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/amiga.c (GRUB_AMIGA_PART_MAGIC): New define.
	(amiga_partition_map_iterate): Check "PART" magic to avoid a very long
	loop in case of incorrect amiga partmap.

2010-12-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/amiga.c (GRUB_AMIGA_RDSK_MAGIC): New define.
	(amiga_partition_map_iterate): Use grub_memcmp instead of grub_strcmp.
	Reported by:EHeM.

2010-12-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_openbsd_find_ramdisk): Silence
	spurious warning.